--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "bootstrap": "^3.4.1",
     "core-js": "^3.6.5",
+    "element-ui": "^2.13.2",
+    "jquery": "^3.5.1",
     "vue": "^2.6.11",
+    "vue-cookies": "^1.7.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
